<?xml version="1.0" encoding="utf-8"?>
<!-- content_first_real_app_main.xml

Primary layout file for the main menu activity

Created by: Zac Monroe
Created on: 2/14/18
Last modified by: Zac Monroe
Last modified on: 2/15/18
Assignment/Project: A290 Android First Real App
Refers to:
 - FirstRealAppMainActivity.java
 - activity_first_real_app_main.xml
 - strings.xml
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="edu.indiana.zcmonroe.a290firstrealapplication.FirstRealAppMainActivity"
  tools:showIn="@layout/activity_first_real_app_main"
  android:padding="30dp"
  android:background="@color/background">
  
  <!-- The text that appears in the main menu near the top of the screen -->
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/MainTitle"
    android:textAppearance="@android:style/TextAppearance.Material.Large"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.1" />
  
  <!-- The "Continue" instance of button that I created -->
  <Button
    android:id="@+id/btn_Continue"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/ContinueButtonLabel"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.3" />
  
  <!-- The "New Game" instance of button that I created -->
  <Button
    android:id="@+id/btn_New"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/NewButtonLabel"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.5"
    />
  
  <!-- The "About" instance of button that I created -->
  <Button
    android:id="@+id/btn_About"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/AboutButtonLabel"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.7"
    />
  
  <!-- The "Exit" instance of button that I created -->
  <Button
    android:id="@+id/btn_Exit"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/ExitButtonLabel"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.9"
    />

</android.support.constraint.ConstraintLayout>
